# ml-proj

./: .gitignore  OUTPUT.md  README.md  Test_Data_No_Target.csv  explore.ipynb  explore.py  mini-notebook.ipynb  mini-notebook.py  notebook.ipynb  notebook.py  pyproject.toml  save_output.py  sync.sh  train-test-diff.ipynb  train-test-diff.py  פרויקט למידת מכונה.md
Notes/: dim-reduction.md  outliers.md
References/: LiveCodingSession.md  README.md  crisp-dm-lec.md  instructions.md
References/archive/: LiveCodingSession.ipynb
archive/: explore.py
archive/scripts/: save.sh
data/: Group_27_Submission.csv  sample_csv.py  test-sample.csv  train-sample.csv
output/: OUTPUT_OLD.md  notebook.md
scripts/: sync.sh
